--- a/src/assets/styles/less/portfolio.less
+++ b/src/assets/styles/less/portfolio.less
@@ -547,7 +547,7 @@ aside.clients {
 
 section#contact {
     background-color: @gray-darker;
-    background-image: url('../resources/media/img/map-image.png');
+    background-image: url('/resources/media/img/map-image.png');
     background-position: center;
     background-repeat: no-repeat;
     .section-heading {
