--- a/src/assets/styles/less/portfolio.less
+++ b/src/assets/styles/less/portfolio.less
@@ -1,5 +1,5 @@
-@import "variables.less";
-@import "mixins.less";
+@import "_variables.less";
+@import "_mixins.less";
 
 // Global Components
 
@@ -547,7 +547,7 @@ aside.clients {
 
 section#contact {
     background-color: @gray-darker;
-    background-image: url('/resources/media/img/map-image.png');
+    background-image: url('../../../../resources/media/img/map-image.png');
     background-position: center;
     background-repeat: no-repeat;
     .section-heading {
